--- a/BUILD.bazel
+++ b/BUILD.bazel
@@ -10,6 +10,7 @@ kernel_module(
         "Kbuild",
     ]) + [
         "//private/google-modules/soc/gs:gs_soc_headers",
+        "//private/google-modules/wlan/wlan_ptracker:wlan_ptracker_headers",
     ],
     outs = [
         "bcmdhd4398.ko",
